tests/cases/compile_fail/owned_in_loop.lsc
main() -> i64 do
  for i in 0..2 do
    declare owned arr = array_new()
    println(array_len(arr))
  end
  return 0
end
